# old_parse_items_game

./: README.md  const.py  download_data.py  load_data.py  main.py  pyproject.toml  schemas.py  skins.py
tests/: test_localization_keys.py
